RTC5impl.hpp


_declspec(dllimport) void __stdcall n_set_offset_xyz(const UINT CardNo, const UINT HeadNo, const long XOffset, const long YOffset, const long ZOffset, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_offset(const UINT CardNo, const UINT HeadNo, const long XOffset, const long YOffset, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_matrix(const UINT CardNo, const UINT HeadNo, const double M11, const double M12, const double M21, const double M22, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_angle(const UINT CardNo, const UINT HeadNo, const double Angle, const UINT at_once);

_declspec(dllimport) void __stdcall n_set_scale(const UINT CardNo, const UINT HeadNo, const double Scale, const UINT at_once);

_declspec(dllimport) void __stdcall n_apply_mcbsp(const UINT CardNo, const UINT HeadNo, const UINT at_once);

_declspec(dllimport) UINT __stdcall n_upload_transform(const UINT CardNo, const UINT HeadNo, const UINT Ptr);

_declspec(dllimport) void __stdcall set_offset_xyz(const UINT HeadNo, const long XOffset, const long YOffset, const long ZOffset, const UINT at_once);

_declspec(dllimport) void __stdcall set_offset(const UINT HeadNo, const long XOffset, const long YOffset, const UINT at_once);

_declspec(dllimport) void __stdcall set_matrix(const UINT HeadNo, const double M11, const double M12, const double M21, const double M22, const UINT at_once);

_declspec(dllimport) void __stdcall set_angle(const UINT HeadNo, const double Angle, const UINT at_once);

_declspec(dllimport) void __stdcall set_scale(const UINT HeadNo, const double Scale, const UINT at_once);

_declspec(dllimport) void __stdcall apply_mcbsp(const UINT HeadNo, const UINT at_once);

_declspec(dllimport) UINT __stdcall upload_transform(const UINT HeadNo, const UINT Ptr);

_declspec(dllimport) UINT __stdcall transform(long& Sig1, long& Sig2, const UINT Ptr, const UINT Code);

_declspec(dllimport) void __stdcall n_set_delay_mode(const UINT CardNo, const UINT VarPoly, const UINT DirectMove3D, const UINT EdgeLevel, const UINT MinJumpDelay, const UINT JumpLengthLimit);

_declspec(dllimport) void __stdcall n_set_jump_speed_ctrl(const UINT CardNo, const double Speed);

_declspec(dllimport) void __stdcall n_set_mark_speed_ctrl(const UINT CardNo, const double Speed);

_declspec(dllimport) void __stdcall n_set_sky_writing_para(const UINT CardNo, const double Timelag, const long LaserOnShift, const UINT Nprev, const UINT Npost);

_declspec(dllimport) long __stdcall n_load_varpolydelay(const UINT CardNo, const char* Name, const UINT No);

_declspec(dllimport) void __stdcall n_set_hi(const UINT CardNo, const UINT HeadNo, const double GalvoGainX, const double GalvoGainY, const long GalvoOffsetX, const long GalvoOffsetY);

_declspec(dllimport) void __stdcall n_get_hi_pos(const UINT CardNo, const UINT HeadNo, long& X1, long& X2, long& Y1, long& Y2);

_declspec(dllimport) UINT __stdcall n_auto_cal(const UINT CardNo, const UINT HeadNo, const UINT Command);

_declspec(dllimport) UINT __stdcall n_get_auto_cal(const UINT CardNo, const UINT HeadNo);

_declspec(dllimport) void __stdcall n_set_sky_writing(const UINT CardNo, const double Timelag, const long LaserOnShift);

_declspec(dllimport) void __stdcall n_get_hi_data(const UINT CardNo, long& X1, long& X2, long& Y1, long& Y2);

_declspec(dllimport) void __stdcall set_delay_mode(const UINT VarPoly, const UINT DirectMove3D, const UINT EdgeLevel, const UINT MinJumpDelay, const UINT JumpLengthLimit);

_declspec(dllimport) void __stdcall set_jump_speed_ctrl(const double Speed);

_declspec(dllimport) void __stdcall set_mark_speed_ctrl(const double Speed);

_declspec(dllimport) void __stdcall set_sky_writing_para(const double Timelag, const long LaserOnShift, const UINT Nprev, const UINT Npost);

_declspec(dllimport) long __stdcall load_varpolydelay(const char* Name, const UINT No);

_declspec(dllimport) void __stdcall set_hi(const UINT HeadNo, const double GalvoGainX, const double GalvoGainY, const long GalvoOffsetX, const long GalvoOffsetY);

_declspec(dllimport) void __stdcall get_hi_pos(const UINT HeadNo, long& X1, long& X2, long& Y1, long& Y2);

_declspec(dllimport) UINT __stdcall auto_cal(const UINT HeadNo, const UINT Command);

_declspec(dllimport) UINT __stdcall get_auto_cal(const UINT HeadNo);

_declspec(dllimport) void __stdcall set_sky_writing(const double Timelag, const long LaserOnShift);

_declspec(dllimport) void __stdcall get_hi_data(long& X1, long& X2, long& Y1, long& Y2);

_declspec(dllimport) void __stdcall n_send_user_data(const UINT CardNo, const UINT Head, const UINT Axis, const long Data0, const long Data1, const long Data2, const long Data3, const long Data4);

_declspec(dllimport) long __stdcall n_read_user_data(const UINT CardNo, const UINT Head, const UINT Axis, long& Data0, long& Data1, long& Data2, long& Data3, long& Data4);

_declspec(dllimport) void __stdcall n_control_command(const UINT CardNo, const UINT Head, const UINT Axis, const UINT Data);

_declspec(dllimport) long __stdcall n_get_value(const UINT CardNo, const UINT Signal);

_declspec(dllimport) void __stdcall n_get_values(const UINT CardNo, const UINT SignalPtr, const UINT ResultPtr);

_declspec(dllimport) UINT __stdcall n_get_head_status(const UINT CardNo, const UINT Head);

_declspec(dllimport) long __stdcall n_set_jump_tuning(const UINT CardNo, const long Flag, const UINT Length, const long VA1, const long VA2, const long VB1, const long VB2, const long JA1, const long JA2, const long JB1, const long JB2);

_declspec(dllimport) long __stdcall n_load_jump_table(const UINT CardNo, const char* Name, const UINT No, const UINT Ack, const UINT MinDelay, const UINT MaxDelay, const UINT ListPos);

_declspec(dllimport) UINT __stdcall n_get_jump_table(const UINT CardNo, const UINT Ptr);

_declspec(dllimport) UINT __stdcall n_set_jump_table(const UINT CardNo, const UINT Ptr);

_declspec(dllimport) void __stdcall send_user_data(const UINT Head, const UINT Axis, const long Data0, const long Data1, const long Data2, const long Data3, const long Data4);

_declspec(dllimport) long __stdcall read_user_data(const UINT Head, const UINT Axis, long& Data0, long& Data1, long& Data2, long& Data3, long& Data4);

_declspec(dllimport) void __stdcall control_command(const UINT Head, const UINT Axis, const UINT Data);

_declspec(dllimport) long __stdcall get_value(const UINT Signal);

_declspec(dllimport) void __stdcall get_values(const UINT SignalPtr, const UINT ResultPtr);

_declspec(dllimport) UINT __stdcall get_head_status(const UINT Head);

_declspec(dllimport) long __stdcall set_jump_tuning(const long Flag, const UINT Length, const long VA1, const long VA2, const long VB1, const long VB2, const long JA1, const long JA2, const long JB1, const long JB2);

_declspec(dllimport) long __stdcall load_jump_table(const char* Name, const UINT No, const UINT Ack, const UINT MinDelay, const UINT MaxDelay, const UINT ListPos);

_declspec(dllimport) UINT __stdcall get_jump_table(const UINT Ptr);

_declspec(dllimport) UINT __stdcall set_jump_table(const UINT Ptr);

_declspec(dllimport) void __stdcall n_select_cor_table_list(const UINT CardNo, const UINT HeadA, const UINT HeadB);

_declspec(dllimport) void __stdcall select_cor_table_list(const UINT HeadA, const UINT HeadB);

_declspec(dllimport) void __stdcall n_list_nop(const UINT CardNo);

_declspec(dllimport) void __stdcall n_long_delay(const UINT CardNo, const UINT Delay);

_declspec(dllimport) void __stdcall n_set_end_of_list(const UINT CardNo);

_declspec(dllimport) void __stdcall n_set_wait(const UINT CardNo, const UINT WaitWord);

_declspec(dllimport) void __stdcall n_list_jump_pos(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_list_jump_rel(const UINT CardNo, const long Pos);

_declspec(dllimport) void __stdcall n_set_list_jump(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall list_nop(void);

_declspec(dllimport) void __stdcall long_delay(const UINT Delay);

_declspec(dllimport) void __stdcall set_end_of_list(void);

_declspec(dllimport) void __stdcall set_wait(const UINT WaitWord);

_declspec(dllimport) void __stdcall list_jump_pos(const UINT Pos);

_declspec(dllimport) void __stdcall list_jump_rel(const long Pos);

_declspec(dllimport) void __stdcall set_list_jump(const UINT Pos);

_declspec(dllimport) void __stdcall n_set_extstartpos_list(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_set_control_mode_list(const UINT CardNo, const UINT Mode);

_declspec(dllimport) void __stdcall n_simulate_ext_start(const UINT CardNo, const long Delay, const UINT EncoderNo);

_declspec(dllimport) void __stdcall set_extstartpos_list(const UINT Pos);

_declspec(dllimport) void __stdcall set_control_mode_list(const UINT Mode);

_declspec(dllimport) void __stdcall simulate_ext_start(const long Delay, const UINT EncoderNo);

_declspec(dllimport) void __stdcall n_list_return(const UINT CardNo);

_declspec(dllimport) void __stdcall n_list_call(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_list_call_abs(const UINT CardNo, const UINT Pos);

_declspec(dllimport) void __stdcall n_sub_call(const UINT CardNo, const UINT Index);

_declspec(dllimport) void __stdcall n_sub_call_abs(const UINT CardNo, const UINT Index);

_declspec(dllimport) void __stdcall list_return(void);

_declspec(dllimport) void __stdcall list_call(const UINT Pos);

_declspec(dllimport) void __stdcall list_call_abs(const UINT Pos);

_declspec(dllimport) void __stdcall sub_call(const UINT Index);

_declspec(dllimport) void __stdcall sub_call_abs(const UINT Index);

_declspec(dllimport) void __stdcall n_list_call_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall n_list_call_abs_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall n_sub_call_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall n_sub_call_abs_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall n_list_jump_pos_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Index);

_declspec(dllimport) void __stdcall n_list_jump_rel_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const long Index);

_declspec(dllimport) void __stdcall n_if_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall n_if_not_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall n_if_pin_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall n_if_not_pin_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall n_switch_ioport(const UINT CardNo, const UINT MaskBits, const UINT ShiftBits);

_declspec(dllimport) void __stdcall n_list_jump_cond(const UINT CardNo, const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall list_call_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall list_call_abs_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall sub_call_cond(const UINT Mask1, const UINT Mask0, const UINT Index);

_declspec(dllimport) void __stdcall sub_call_abs_cond(const UINT Mask1, const UINT Mask0, const UINT Index);

_declspec(dllimport) void __stdcall list_jump_pos_cond(const UINT Mask1, const UINT Mask0, const UINT Pos);

_declspec(dllimport) void __stdcall list_jump_rel_cond(const UINT Mask1, const UINT Mask0, const long Pos);

_declspec(dllimport) void __stdcall if_cond(const UINT Mask1, const UINT Mask0);

_declspec(dllimport) void __stdcall if_not_cond(const UINT Mask1, const UINT Mask0);