RTC5Import.pas

procedure n_set_offset_xyz(CardNo: LongWord; HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; ZOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_offset(CardNo: LongWord; HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_matrix(CardNo: LongWord; HeadNo: LongWord; M11: Double; M12: Double; M21: Double; M22: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_angle(CardNo: LongWord; HeadNo: LongWord; Angle: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_set_scale(CardNo: LongWord; HeadNo: LongWord; Scale: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure n_apply_mcbsp(CardNo: LongWord; HeadNo: LongWord; at_once: LongWord); stdcall; external RTC5DLL;
function  n_upload_transform(CardNo: LongWord; HeadNo: LongWord; Ptr: PLongWord): LongWord; stdcall; external RTC5DLL;
procedure set_offset_xyz(HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; ZOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_offset(HeadNo: LongWord; XOffset: LongInt; YOffset: LongInt; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_matrix(HeadNo: LongWord; M11: Double; M12: Double; M21: Double; M22: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_angle(HeadNo: LongWord; Angle: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure set_scale(HeadNo: LongWord; Scale: Double; at_once: LongWord); stdcall; external RTC5DLL;
procedure apply_mcbsp(HeadNo: LongWord; at_once: LongWord); stdcall; external RTC5DLL;
function  upload_transform(HeadNo: LongWord; Ptr: PLongWord): LongWord; stdcall; external RTC5DLL;
function  transform(var Sig1: LongInt; var Sig2: LongInt; Ptr: PLongWord; Code: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_set_delay_mode(CardNo: LongWord; VarPoly: LongWord; DirectMove3D: LongWord; EdgeLevel: LongWord; MinJumpDelay: LongWord; JumpLengthLimit: LongWord); stdcall; external RTC5DLL;
procedure n_set_jump_speed_ctrl(CardNo: LongWord; Speed: Double); stdcall; external RTC5DLL;
procedure n_set_mark_speed_ctrl(CardNo: LongWord; Speed: Double); stdcall; external RTC5DLL;
procedure n_set_sky_writing_para(CardNo: LongWord; Timelag: Double; LaserOnShift: LongInt; Nprev: LongWord; Npost: LongWord); stdcall; external RTC5DLL;
function  n_load_varpolydelay(CardNo: LongWord; Name: PChar; No: LongWord): LongInt; stdcall; external RTC5DLL;
procedure n_set_hi(CardNo: LongWord; HeadNo: LongWord; GalvoGainX: Double; GalvoGainY: Double; GalvoOffsetX: LongInt; GalvoOffsetY: LongInt); stdcall; external RTC5DLL;
procedure n_get_hi_pos(CardNo: LongWord; HeadNo: LongWord; var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC5DLL;
function  n_auto_cal(CardNo: LongWord; HeadNo: LongWord; Command: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_get_auto_cal(CardNo: LongWord; HeadNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure n_set_sky_writing(CardNo: LongWord; Timelag: Double; LaserOnShift: LongInt); stdcall; external RTC5DLL;
procedure n_get_hi_data(CardNo: LongWord; var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC5DLL;
procedure set_delay_mode(VarPoly: LongWord; DirectMove3D: LongWord; EdgeLevel: LongWord; MinJumpDelay: LongWord; JumpLengthLimit: LongWord); stdcall; external RTC5DLL;
procedure set_jump_speed_ctrl(Speed: Double); stdcall; external RTC5DLL;
procedure set_mark_speed_ctrl(Speed: Double); stdcall; external RTC5DLL;
procedure set_sky_writing_para(Timelag: Double; LaserOnShift: LongInt; Nprev: LongWord; Npost: LongWord); stdcall; external RTC5DLL;
function  load_varpolydelay(Name: PChar; No: LongWord): LongInt; stdcall; external RTC5DLL;
procedure set_hi(HeadNo: LongWord; GalvoGainX: Double; GalvoGainY: Double; GalvoOffsetX: LongInt; GalvoOffsetY: LongInt); stdcall; external RTC5DLL;
procedure get_hi_pos(HeadNo: LongWord; var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC5DLL;
function  auto_cal(HeadNo: LongWord; Command: LongWord): LongWord; stdcall; external RTC5DLL;
function  get_auto_cal(HeadNo: LongWord): LongWord; stdcall; external RTC5DLL;
procedure set_sky_writing(Timelag: Double; LaserOnShift: LongInt); stdcall; external RTC5DLL;
procedure get_hi_data(var X1: LongInt; var X2: LongInt; var Y1: LongInt; var Y2: LongInt); stdcall; external RTC5DLL;
procedure n_send_user_data(CardNo: LongWord; Head: LongWord; Axis: LongWord; Data0: LongInt; Data1: LongInt; Data2: LongInt; Data3: LongInt; Data4: LongInt); stdcall; external RTC5DLL;
function  n_read_user_data(CardNo: LongWord; Head: LongWord; Axis: LongWord; var Data0: LongInt; var Data1: LongInt; var Data2: LongInt; var Data3: LongInt; var Data4: LongInt): LongInt; stdcall; external RTC5DLL;
procedure n_control_command(CardNo: LongWord; Head: LongWord; Axis: LongWord; Data: LongWord); stdcall; external RTC5DLL;
function  n_get_value(CardNo: LongWord; Signal: LongWord): LongInt; stdcall; external RTC5DLL;
procedure n_get_values(CardNo: LongWord; SignalPtr: PLongWord; ResultPtr: PLongInt); stdcall; external RTC5DLL;
function  n_get_head_status(CardNo: LongWord; Head: LongWord): LongWord; stdcall; external RTC5DLL;
function  n_set_jump_tuning(CardNo: LongWord; Flag: LongInt; Length: LongWord; VA1: LongInt; VA2: LongInt; VB1: LongInt; VB2: LongInt; JA1: LongInt; JA2: LongInt; JB1: LongInt; JB2: LongInt): LongInt; stdcall; external RTC5DLL;
function  n_load_jump_table(CardNo: LongWord; Name: PChar; No: LongWord; Ack: LongWord; MinDelay: LongWord; MaxDelay: LongWord; ListPos: LongWord): LongInt; stdcall; external RTC5DLL;
function  n_get_jump_table(CardNo: LongWord; Ptr: PWord): LongWord; stdcall; external RTC5DLL;
function  n_set_jump_table(CardNo: LongWord; Ptr: PWord): LongWord; stdcall; external RTC5DLL;
procedure send_user_data(Head: LongWord; Axis: LongWord; Data0: LongInt; Data1: LongInt; Data2: LongInt; Data3: LongInt; Data4: LongInt); stdcall; external RTC5DLL;
function  read_user_data(Head: LongWord; Axis: LongWord; var Data0: LongInt; var Data1: LongInt; var Data2: LongInt; var Data3: LongInt; var Data4: LongInt): LongInt; stdcall; external RTC5DLL;
procedure control_command(Head: LongWord; Axis: LongWord; Data: LongWord); stdcall; external RTC5DLL;
function  get_value(Signal: LongWord): LongInt; stdcall; external RTC5DLL;
procedure get_values(SignalPtr: PLongWord; ResultPtr: PLongInt); stdcall; external RTC5DLL;
function  get_head_status(Head: LongWord): LongWord; stdcall; external RTC5DLL;
function  set_jump_tuning(Flag: LongInt; Length: LongWord; VA1: LongInt; VA2: LongInt; VB1: LongInt; VB2: LongInt; JA1: LongInt; JA2: LongInt; JB1: LongInt; JB2: LongInt): LongInt; stdcall; external RTC5DLL;
function  load_jump_table(Name: PChar; No: LongWord; Ack: LongWord; MinDelay: LongWord; MaxDelay: LongWord; ListPos: LongWord): LongInt; stdcall; external RTC5DLL;
function  get_jump_table(Ptr: PWord): LongWord; stdcall; external RTC5DLL;
function  set_jump_table(Ptr: PWord): LongWord; stdcall; external RTC5DLL;
procedure n_select_cor_table_list(CardNo: LongWord; HeadA: LongWord; HeadB: LongWord); stdcall; external RTC5DLL;
procedure select_cor_table_list(HeadA: LongWord; HeadB: LongWord); stdcall; external RTC5DLL;
procedure n_list_nop(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_long_delay(CardNo: LongWord; Delay: LongWord); stdcall; external RTC5DLL;
procedure n_set_end_of_list(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_set_wait(CardNo: LongWord; WaitWord: LongWord); stdcall; external RTC5DLL;
procedure n_list_jump_pos(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_list_jump_rel(CardNo: LongWord; Pos: LongInt); stdcall; external RTC5DLL;
procedure n_set_list_jump(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure list_nop(); stdcall; external RTC5DLL;
procedure long_delay(Delay: LongWord); stdcall; external RTC5DLL;
procedure set_end_of_list(); stdcall; external RTC5DLL;
procedure set_wait(WaitWord: LongWord); stdcall; external RTC5DLL;
procedure list_jump_pos(Pos: LongWord); stdcall; external RTC5DLL;
procedure list_jump_rel(Pos: LongInt); stdcall; external RTC5DLL;
procedure set_list_jump(Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_extstartpos_list(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_set_control_mode_list(CardNo: LongWord; Mode: LongWord); stdcall; external RTC5DLL;
procedure n_simulate_ext_start(CardNo: LongWord; Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure set_extstartpos_list(Pos: LongWord); stdcall; external RTC5DLL;
procedure set_control_mode_list(Mode: LongWord); stdcall; external RTC5DLL;
procedure simulate_ext_start(Delay: LongInt; EncoderNo: LongWord); stdcall; external RTC5DLL;
procedure n_list_return(CardNo: LongWord); stdcall; external RTC5DLL;
procedure n_list_call(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_list_call_abs(CardNo: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_sub_call(CardNo: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure n_sub_call_abs(CardNo: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure list_return(); stdcall; external RTC5DLL;
procedure list_call(Pos: LongWord); stdcall; external RTC5DLL;
procedure list_call_abs(Pos: LongWord); stdcall; external RTC5DLL;
procedure sub_call(Index: LongWord); stdcall; external RTC5DLL;
procedure sub_call_abs(Index: LongWord); stdcall; external RTC5DLL;
procedure n_list_call_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_list_call_abs_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_sub_call_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_sub_call_abs_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure n_list_jump_pos_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure n_list_jump_rel_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Index: LongInt); stdcall; external RTC5DLL;
procedure n_if_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure n_if_not_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure n_if_pin_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure n_if_not_pin_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure n_switch_ioport(CardNo: LongWord; MaskBits: LongWord; ShiftBits: LongWord); stdcall; external RTC5DLL;
procedure n_list_jump_cond(CardNo: LongWord; Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure list_call_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure list_call_abs_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure sub_call_cond(Mask1: LongWord; Mask0: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure sub_call_abs_cond(Mask1: LongWord; Mask0: LongWord; Index: LongWord); stdcall; external RTC5DLL;
procedure list_jump_pos_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongWord); stdcall; external RTC5DLL;
procedure list_jump_rel_cond(Mask1: LongWord; Mask0: LongWord; Pos: LongInt); stdcall; external RTC5DLL;
procedure if_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
procedure if_not_cond(Mask1: LongWord; Mask0: LongWord); stdcall; external RTC5DLL;
